--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
       <input type="number" id="segundo-numero" />
       <input type="submit" value="Sumar" id="sumar-button" />
     </form>
-    <div id="resultado-div"></div>
-
+    <div id="resultadoSumar-div"></div>
+    <form id="multiplicar-form">
+      <label for="primer-numero">Primer número:</label>
+      <input type="number" id="primer1-numero" />
+      <label for="segundo-numero">Segundo número:</label>
+      <input type="number" id="segundo2-numero" />
+      <input type="submit" value="Multiplicar" id="multiplicar-button" />
+    </form>
+    <div id="resultadoMultiplicar-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
